fixing the z-index on the overlay-status message

--- a/src/app/@ansyn/ansyn/less/z-index-globals.less
+++ b/src/app/@ansyn/ansyn/less/z-index-globals.less
@@ -6,6 +6,7 @@
 @z-index-tooltip-after: 2;
 @z-index-case-menu: 2;
 @z-index-task-menu: 2;
+@z-index-overlay-status-message: 1;
 @z-index-annotations-control: 2;
 @z-index-image-processing-control: 2;
 @z-index-tools-tooltiptext: 2;
